smartiward file upload issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,7 @@ spring.http.multipart.maxRequestSize= 30MB
 
 server.port=8585
 
+spring.servlet.multipart.location= /home/SmartNeta/images/temp_files
+spring.http.multipart.location= /home/SmartNeta/images/temp_files
 filePath=/home/SmartNeta/images
 
